# kubectl-distribute

./: Cargo.toml  LICENSE  README.md
src/: main.rs
