[package]
name = "kubectl-distribute"
authors = ["Andrew Nordman <cadwallion@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_20"] }
kube = { version = "0.78.0", features = ["derive", "runtime", "ws"] }
tar = "0.4.38"
tokio = { version = "1.25.0", features = ["full"] }
